--- a/index.html
+++ b/index.html
@@ -1320,6 +1320,16 @@ function MatchVotingView({ match, currentUser, users, onBack }) {
             if (myVote) {
                 setVotes(myVote.votes);
                 setHasVoted(true);
+            } else {
+                // 🆕 Inizializza tutti i voti con il valore default
+                const playersToVote = [...match.teams.gialli, ...match.teams.verdi]
+                    .filter(p => p.playerId !== currentUser.id);
+                
+                const initialVotes = {};
+                playersToVote.forEach(player => {
+                    initialVotes[player.playerId] = DEFAULT_VOTE_VALUE;
+                });
+                setVotes(initialVotes);
             }
         } catch (error) {
             console.error('Errore caricamento voti:', error);
@@ -1358,7 +1368,7 @@ function MatchVotingView({ match, currentUser, users, onBack }) {
 
     const isComplete = () => {
         const playersToVote = getPlayersToVote();
-        return playersToVote.every(playerId => votes[playerId] !== undefined);
+        return playersToVote.every(player => votes[player.playerId] !== undefined);
     };
 
     const handleSubmit = async () => {
