--- a/index.html
+++ b/index.html
@@ -2533,7 +2533,7 @@ const loadAdminMatches = async () => {
 
     // 🆕 RIAPRI ISCRIZIONI
     const handleReopenRegistrations = async (matchId) => {
-    const match = matches.find(m => m.id === matchId);
+    const match = adminMatches.find(m => m.id === matchId);
     if (!match) return;
     
     let confirmMessage = '';
