--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
       firebase.initializeApp(firebaseConfig);
       const db = firebase.firestore();
     </script>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-860CG0BR57"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-860CG0BR57');
+</script>
 </head>
 <!-- 
 ================================================================================
